# detect-data-drift-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  encode_env.sh  pyproject.toml  requirements.txt
config/: detect.yaml  train.yaml
data/: .gitignore
kestra_pipeline/: detect_data_drift.yaml  send_slack_message.yaml  train_model.yaml
setup/: create_table.sql  requirements.txt
src/: detect_data_drift.py  get_data.py
src/detect/: detect_data_drift.py  requirements.txt
src/pipeline/: detect_data_drift.py  get_data.py
src/pipeline/detect/: detect_data_drift.py  requirements.txt
src/pipeline/train/: requirements.txt  train_model.py
src/scripts/: create_db.py
src/setup/: create_reference_data.py  create_tables.py  drop_tables.py
src/train/: train_model.py
